[package]
name = "rink-web"
version = "0.4.0"
authors = ["Tiffany Bennett <tiffany@stormbit.net>"]
description = "Web interface to Rink"
homepage = "https://github.com/tiffany352/rink-rs"
repository = "https://github.com/tiffany352/rink-rs"
readme = "README.md"
license = "MPL-2.0"

[features]
watch = ["handlebars-iron/watch"]

[dependencies]
ipc-channel = "0.11.2"
libc = "0.2.14"
chrono = { version = "0.4.6", features = ["serde"] }
serde_json = "1.0.33"
serde_derive = "1.0.80"
serde = { version = "1.0.80", features = ["rc"] }
url = "1.7.2"
toml = "0.4"
# iron crates
iron = "0.5"
router = "0.5"
mount = "0.3"
params = "0.6"
handlebars = "0.26"
handlebars-iron = "0.24"
staticfile = "0.4"
limiter = "0.3"
logger = "0.3"

[dependencies.rink]
path = "../"
features = ["nightly"]
