[package]
name = "rink-web"
version = "0.4.0"
authors = ["Tiffany Bennett <tiffany@stormbit.net>"]
description = "Web interface to Rink"
homepage = "https://github.com/tiffany352/rink-rs"
repository = "https://github.com/tiffany352/rink-rs"
readme = "README.md"
license = "MPL-2.0"

[features]
watch = ["handlebars-iron/watch"]

[dependencies]
ipc-channel = "0.11.2"
libc = "0.2.14"
chrono = { version = "0.4.6", features = ["serde"] }
serde_json = "1.0.33"
serde_derive = "1.0.80"
serde = { version = "1.0.80", features = ["rc"] }
url = "1.7.2"
toml = "0.4"
# iron crates
iron = "0.6.0"
router = "0.6"
mount = "0.4"
params = "0.8"
handlebars = "0.32"
handlebars-iron = "0.26"
staticfile = "0.5.0"
limiter = { version = "0.4", git = "https://github.com/yzhs/limiter" }
logger = "0.4"

[dependencies.rink]
path = "../"
features = ["nightly"]